[package]
name = "webfinger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "json", "rustls-tls"]}
clap = { version = "4.0.22", features = ["derive"] }
jsonxf = "1.1"
